--- a/WRR/site-plan-rafting.html
+++ b/WRR/site-plan-rafting.html
@@ -9,10 +9,11 @@
   <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
 </head>
 
+
 <body>
   <header>
     <h1>Rafting For Fun & Pleasure Site Plan</h1>
-    <h2>Kaitlyn Johnson</h2>
+    <h2>Kaitlyn Johnson !</h2>
     <h2>WDD 130</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
