--- a/WRR/index.html
+++ b/WRR/index.html
@@ -6,85 +6,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafting For Fun & Pleasure | Dry Oar Boating | Home</title>
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="Image/rafting_for_fun_and_pleasure.jpg" alt="Dry Oar Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
-    </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="Image/rafting_hero.jpg" alt="People enjoying rafting">
-        </div> 
-        <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories With Dry Oar</h4>
-            <div class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
-            </div>
-        </section>
-    </div>
-    <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="Image/man_lake.jpg" alt="river in forest">
-            <img class="icon" src="Image/man-standing-middle-body-water.jpg" alt="river icon">
-            <h2>There is Water!</h2>
-            <p>
-                Do you ever wish that you were just standing in 
-                slow water staring at the world?
-                We did too! With Rafting for Fun & Pleasure, 
-                we ensure that all rivers and/or lakes are
-                sort of sanitary. Nothing says fun like 
-                getting fresh water diseases!
-            </p>
-        </section>
-        <section class="camping-card">
-            <img class="card-img" src="Image/Bear.jpg" alt="tent in mountains">
-            <img class="icon" src="Image/tent.jpg" alt="fire icon">
-            <h2>There are Tents!</h2>
-            <p>
-                There was a time when a man had to sit and watch bears
-                attacking his family while standing
-                in the pouring rain. While Rafting for Fun & Pleasure 
-                might not be able to keep your family away from bear attacks,
-                we can ensure that you won't see the 
-                carnage while getting soaked. We have tents!
-            </p>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="Image/salmon-kayak4.jpg" alt="rafting boat">
-            <img class="icon" src="Image/rafting4_600.jpg" alt="oars icon">
-            <h2>There is Faster Moving Water!</h2>
-            <p>
-                Did you think that we only had slow water??? 
-                Look no farther than our fast moving water!
-                Trust me. It's cooler than you think.
-            </p>
-        </section>
-    </main>    
-    <footer>
-        <p>Dry Oar &copy; 2025 - Kaitlyn Johnson</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
-        <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
+    <div id = "content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="Image/rafting_hero.jpg" alt="Dry Oar Logo">
             </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
+        </header>
+        <div id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="Image/rafting_for_fun_and_pleasure.jpg" alt="People enjoying rafting">
+            </div> 
+            <section id="hero-msg">
+                <h1 class="home-title">Have An Adventure</h1>
+                <h4>Make Memories With Dry Oar</h4>
+                <div class='button-box'>
+                    <a class='book' href="contactus.html">Book Now</a>
+                </div>
+            </section>
         </div>
-    </footer>
+        <main class="home-grid">
+            <section class="rivers-card">
+                <img class="card-img" src="Image/man_lake.jpg" alt="river in forest">
+                <img class="icon" src="Image/man-standing-middle-body-water.jpg" alt="river icon">
+                <h2>There is Water!</h2>
+                <p>
+                    Do you ever wish that you were just standing in 
+                    slow water staring at the world?
+                    We did too! With Rafting for Fun & Pleasure, 
+                    we ensure that all rivers and/or lakes are
+                    sort of sanitary. Nothing says fun like 
+                    getting fresh water diseases!
+                </p>
+            </section>
+            <section class="camping-card">
+                <img class="card-img" src="Image/bear_take_two.png" alt="tent in mountains">
+                <img class="icon" src="Image/tent.jpg" alt="fire icon">
+                <h2>There are Tents!</h2>
+                <p>
+                    There was a time when a man had to sit and watch bears
+                    attacking his family while standing
+                    in the pouring rain. While Rafting for Fun & Pleasure 
+                    might not be able to keep your family away from bear attacks,
+                    we can ensure that you won't see the 
+                    carnage while getting soaked. We have tents!
+                </p>
+            </section>
+            <section class="rapids-card">
+                <img class="card-img" src="Image/salmon-kayak4.jpg" alt="rafting boat">
+                <img class="icon" src="Image/rafting4_600.jpg" alt="oars icon">
+                <h2>There is Faster Moving Water!</h2>
+                <p>
+                    Did you think that we only had slow water??? 
+                    Look no farther than our fast moving water!
+                    Trust me. It's cooler than you think.
+                </p>
+            </section>
+        </main>    
+        <footer>
+            <p>Dry Oar &copy; 2025 - Kaitlyn Johnson</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
 
