--- a/WRR/index.html
+++ b/WRR/index.html
@@ -51,7 +51,7 @@
         </section>
 
         <section class="camping-card">
-            <img class="card-img" src="Image/Bear.jpg" alt="tent in mountains">
+            <img class="card-img" src="Image/bear_take_two.png" alt="tent in mountains">
             <img class="icon" src="Image/tent.jpg" alt="fire icon">
             <h2>There are Tents!</h2>
             <p>
