--- a/WRR/index.html
+++ b/WRR/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -39,41 +39,31 @@
                 <img class="card-img" src="Image/man_lake.jpg" alt="river in forest">
                 <img class="icon" src="Image/man-standing-middle-body-water.jpg" alt="river icon">
                 <h2>There is Water!</h2>
-                <p>
-                    Do you ever wish that you were just standing in 
-                    slow water staring at the world?
-                    We did too! With Rafting for Fun & Pleasure, 
-                    we ensure that all rivers and/or lakes are
-                    sort of sanitary. Nothing says fun like 
-                    getting fresh water diseases!
-                </p>
             </section>
 
             <section class="camping-card">
                 <img class="card-img" src="Image/bear_take_two.png" alt="tent in mountains">
                 <img class="icon" src="Image/tent.jpg" alt="fire icon">
                 <h2>There are Tents!</h2>
-                <p>
-                    There was a time when a man had to sit and watch bears
-                    attacking his family while standing
-                    in the pouring rain. While Rafting for Fun & Pleasure 
-                    might not be able to keep your family away from bear attacks,
-                    we can ensure that you won't see the 
-                    carnage while getting soaked. We have tents!
-                </p>
             </section>
 
             <section class="rapids-card">
                 <img class="card-img" src="Image/salmon-kayak4.jpg" alt="rafting boat">
                 <img class="icon" src="Image/rafting4_600.jpg" alt="oars icon">
                 <h2>There is Faster Moving Water!</h2>
-                <p>
-                    Did you think that we only had slow water??? 
-                    Look no farther than our fast moving water!
-                    Trust me. It's cooler than you think.
-                </p>
             </section>
-            <div id="background"></div>
+            <div id="background">
+               <img class="card-img" src="Image/mountains.jpg" alt="mountains"> 
+               <p>
+                   There was a time when a man had to sit and watch bears
+                    attacking his family while standing
+                    in the pouring rain. While Rafting for Fun & Pleasure 
+                    might not be able to keep your family away from bear attacks,
+                    we can ensure that you won't see the 
+                    carnage while getting soaked. We have tents!
+               </p>
+               </div>
+            </div>
 
         </main>    
 
@@ -83,13 +73,13 @@
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="Image/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="Image/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="Image/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
