--- a/WRR/index.html
+++ b/WRR/index.html
@@ -27,7 +27,7 @@
             </div> 
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories With Dry Oar</h4>
+                <h4>Make Memories With Rafting For Fun & Pleasure</h4>
                 <div class='button-box'>
                     <a class='book' href="contactus.html">Book Now</a>
                 </div>
@@ -38,32 +38,27 @@
             <section class="rivers-card">
                 <img class="card-img" src="Image/man_lake.jpg" alt="river in forest">
                 <img class="icon" src="Image/man-standing-middle-body-water.jpg" alt="river icon">
-                <h2>There is Water!</h2>
+                <h2>Water!</h2>
             </section>
 
             <section class="camping-card">
-                <img class="card-img" src="Image/bear_take_two.png" alt="tent in mountains">
+                <img class="card-img" src="Image/tenty.jpg" alt="tent in mountains">
                 <img class="icon" src="Image/tent.jpg" alt="fire icon">
-                <h2>There are Tents!</h2>
+                <h2>Tents!</h2>
             </section>
 
             <section class="rapids-card">
                 <img class="card-img" src="Image/salmon-kayak4.jpg" alt="rafting boat">
                 <img class="icon" src="Image/rafting4_600.jpg" alt="oars icon">
-                <h2>There is Faster Moving Water!</h2>
+                <h2>Rapids!</h2>
             </section>
-            <div id="background">
-               <img class="card-img" src="Image/mountains.jpg" alt="mountains"> 
-               <p>
-                   There was a time when a man had to sit and watch bears
-                    attacking his family while standing
-                    in the pouring rain. While Rafting for Fun & Pleasure 
-                    might not be able to keep your family away from bear attacks,
-                    we can ensure that you won't see the 
-                    carnage while getting soaked. We have tents!
-               </p>
-               </div>
-            </div>
+            <div id="background"></div>
+            <img class="mountains" src="Image/mountains.jpg" alt="Misty mountains">
+            <section class="msg">
+                <h2>More Than Just The Thrill</h2>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <a class='join' href="rivers.html">Join Us</a>
+            </section>
 
         </main>    
 
