--- a/WRR/index.html
+++ b/WRR/index.html
@@ -27,7 +27,7 @@
             </div> 
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories With Rafting For Fun & Pleasure</h4>
+                <h4>Make Memories With Rafting For Fun & Pleasure!</h4>
                 <div class='button-box'>
                     <a class='book' href="contactus.html">Book Now</a>
                 </div>
@@ -44,7 +44,7 @@
             <section class="camping-card">
                 <img class="card-img" src="Image/tenty.jpg" alt="tent in mountains">
                 <img class="icon" src="Image/tent.jpg" alt="fire icon">
-                <h2>Tents!</h2>
+                <h2>Camping!</h2>
             </section>
 
             <section class="rapids-card">
