Updated Site Plan

--- a/Council/site-plan.html
+++ b/Council/site-plan.html
@@ -127,29 +127,52 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+       Welcome to The Council
+
+Founded in September 2024, The Council is a vibrant community at BYUI dedicated to fostering connections across diverse academic disciplines. Our mission is simple yet profound: to share knowledge, develop skills, and exchange witty banter. From offering advice to sharing meals, The Council stands ready to support every member of our college community, ensuring they not only survive but thrive during their university journey.
+
+Our Website: A Gateway to Community and Fun
+
+The Council's website is your gateway to staying informed and engaged. Here, you'll find essential details about our weekly meetings, member profiles, and upcoming events. We believe in spreading joy and inspiration through daily quotes, practical college advice, and entertaining anecdotes, including our infamous "Goblet of Desire."
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img class="home" src="Image/home1.jpg" alt="tea_time">
+        <img class="home" src="Image/home2.jpg" alt="nacho">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
-      </p>
+        Exploring The Council Website
+
+Member Profiles: Discover who we are! Each member profile includes contact information, major, current location, and, if applicable, relationship status. This helps answer common questions and fosters connections within our community.
+
+Activities and Events: Stay in the loop with our exciting activities:
+
+The Goblet of Desire: Interested in dating or double dating? Find out how to participate and enjoy humorous dating stories from our members.
+
+Tea Time: Join us every Sunday for Tea Time! Check out the agenda, submit your questions for our Q&A forum, and access the Zoom link for remote participation.
+
+Kiwi Loco Run: Don't miss our weekday hangouts! Get details on buy-one-get-one-free days and our workout Wednesdays.
+      <p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img class="second" src="Image/IMG_0471.jpg" alt="image for page">
+        <img class="second" src="Image/IMG_1678.jpg" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Why The Council Matters
+
+The Council isn't just a group—it's a community. Our website plays a crucial role in ensuring every student at BYUI feels connected and supported. By centralizing information and providing easy access to our activities, we aim to enhance participation, foster new friendships, and create a sense of belonging.
+
+Join Us!
+
+Whether you're seeking advice, looking to meet new friends, or simply want to laugh along with us, The Council welcomes you. Explore our website, join our meetings, and become part of a community where knowledge, camaraderie, and a good laugh are always on the agenda.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img class="third" src="Image/IMG_1816.jpg" alt="image for page3">
+        <img class="third" src="Image/IMG_1925.jpg" alt="image for page3">
 
       </ul>
       <hr>
